# episodic-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
benchmarks/: judgment_recall.py
examples/: demo.py
src/episodic_memory/: __init__.py  core.py  embed.py  scoring.py  storage.py  types.py
tests/: conftest.py  test_core.py  test_embed.py  test_scoring.py  test_storage.py
