[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "episodic-memory"
version = "0.1.0"
description = "A memory layer that remembers how your agent decided, not just what it knows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agent", "memory", "llm", "ai", "judgment"]
authors = [
    {name = "Tam Dai", email = "471909166@qq.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/fk965/episodic-memory"
"Source" = "https://github.com/fk965/episodic-memory"
"Issues" = "https://github.com/fk965/episodic-memory/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["episodic_memory*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -p no:cacheprovider"

[tool.coverage.run]
source = ["src/episodic_memory"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true